--- a/Assignment 02.Rmd
+++ b/Assignment 02.Rmd
@@ -19,11 +19,12 @@ library(ggplot2)
 This is a household-level analysis. The data are collected from the 1-year American Community Survey Sample from 2018 and covered all households in New York that spent money on the first mortgage payment.
 
 the following five variables are included:
-     - When structure first built (bd_year)(categorical)
-     - Household language (household_language) (categorical)
-     - Household income (HINCP) (continuous)
-     - First mortgage payment (MRGP) (continuous)
-     - Property Value (VALP) (continuous)
+
+     - When structure first built (bd_year)(categorical)  
+     - Household language (household_language) (categorical)  
+     - Household income (HINCP) (continuous)  
+     - First mortgage payment (MRGP) (continuous)  
+     - Property Value (VALP) (continuous)  
      
 Compared With original assignment 1, I have changed three variables: the construction year of the building, the first mortgage payment, and household language. The reason for this is that "Food stamp" and "Laptop" are not of many categories and might not be useful for future analysis. The addition of variable will help answer questions such as "Do richer families live in newer buildings?", "Are old buildings more expensive or not?".
 ```{r, message=FALSE}
@@ -34,8 +35,9 @@ attach(household_data_as2)
 # 3. Distribution of a continuous variable HINCP (Household income)
 ```{r}
 paste("The sample mean for the household income is", prettyNum(mean(HINCP)), "dollars.")
+paste("The sample median for the household income is", prettyNum(median(HINCP)), "dollars.")
 paste("The sample standard deviation for the household income is", prettyNum(sd(HINCP)), "dollars.")
-paste("The sample interquartile deviation for the household income is", quantile(HINCP)["25%"], "to", quantile(HINCP)["75%"], "dollars.")
+paste("The sample interquartile range for the household income is", quantile(HINCP)["25%"], "to", quantile(HINCP)["75%"], "dollars.")
 household_income_95 <- t.test(HINCP)
 household_income_95
 paste("The 95-percent confidence interval for the household income is", prettyNum(household_income_95$conf.int[1]), "to", prettyNum(household_income_95$conf.int[2]), "dollars.")
@@ -48,17 +50,20 @@ hist_hh_income +
   scale_y_continuous(name = "Number of household in sample") +
   annotate("text", x = 1000000, y = 13000, size = 3,
            label = paste("Income mean (95% confidence): ",prettyNum(household_income_95$conf.int[1]), "to", prettyNum(household_income_95$conf.int[2]), "dollars.",
+                         "\nSample median: ",prettyNum(median(HINCP)), "dollars.",
                          "\nSample mean: ",prettyNum(mean(HINCP)), "dollars.",
                          "\nSample standard deviation: ", prettyNum(sd(HINCP)), "dollars.",
                          "\nSample interquatile range: ", quantile(HINCP)["25%"], "to", quantile(HINCP)["75%"], "dollars."))
 ```
-In 2018, Families included in the sample made around 150500 dollars on average. The income differences between families were huge. Half of those households made 72000 to 180000 dollars for a year. The overall average of household income was likely to be in the range from 149523.5 to 151463.7 dollars. The diagram is right skew, indicating that there were a few people much more affluent than others.
+
+In 2018, Families included in the sample made around 150500 dollars on average. Half of all households made more than 117000 dollars. The income differences between families were huge. Half of those households made 72000 to 180000 dollars for a year. The overall average of household income was likely to be in the range from 149523.5 to 151463.7 dollars. The diagram is right skew, indicating that there were a few people much more affluent than others.
 
 # 4. Distribution of a continuous variable MRGP (First Mortgage Payment)
 ```{r}
 paste("The sample mean for the first mortgage payment is", prettyNum(mean(MRGP)), "dollars.")
+paste("The sample median for the first mortgage payment is", prettyNum(median(MRGP)), "dollars.")
 paste("The sample standard deviation for the first mortgage payment is", prettyNum(sd(MRGP)), "dollars.")
-paste("The sample interquartile deviation for the first mortgage payment is", quantile(MRGP)["25%"], "to", quantile(MRGP)["75%"], "dollars.")
+paste("The sample interquartile range for the first mortgage payment is", quantile(MRGP)["25%"], "to", quantile(MRGP)["75%"], "dollars.")
 mortgage_95 <- t.test(MRGP)
 mortgage_95
 paste("The 95-percent confidence interval for the first mortgage payment is", prettyNum(mortgage_95$conf.int[1]), "to", prettyNum(mortgage_95$conf.int[2]), "dollars.")
@@ -71,17 +76,20 @@ hist_mortgage +
   scale_y_continuous(name = "Number of household in sample") +
   annotate("text", x = 5000, y = 5000, size = 3,
            label = paste("Mortgage mean (95% confidence): ",prettyNum(mortgage_95$conf.int[1]), "to", prettyNum(mortgage_95$conf.int[2]),
+                         "\nSample median: ",prettyNum(median(MRGP)),
                          "\nSample mean: ",prettyNum(mean(MRGP)),
                          "\nSample standard deviation: ", prettyNum(sd(MRGP)),
                          "\nSample interquatile range: ", quantile(MRGP)["25%"], "to", quantile(MRGP)["75%"] ))
 ```
-In 2018, Families included in the sample spent around 1791 dollars on average for the first mortgage payment. The payment differences between families were huge. Half of those households spent 800 to 2500 dollars for the first mortgage. The overall average of first mortgage payment was likely to range from 1782.348 to 1800.747 dollars. The diagram is right skew, indicating that a few households were spending much more money than others on the first mortgage.
+
+In 2018, Families included in the sample spent around 1791 dollars on average for the first mortgage payment. Half of all households spent more than 1500 dollars on it. The payment differences between families were huge. Half of those households spent 800 to 2500 dollars for the first mortgage. The overall average of first mortgage payment was likely to range from 1782.348 to 1800.747 dollars. The diagram is right skew, indicating that a few households were spending much more money than others on the first mortgage.
 
 # 5. Distribution of a continuous variable VALP (Property Value)
 ```{r}
 paste("The sample mean for the property value is", prettyNum(mean(VALP)), "dollars.")
+paste("The sample median for the property value is", prettyNum(median(VALP)), "dollars.")
 paste("The sample standard deviation for the property value is", prettyNum(sd(VALP)), "dollars.")
-paste("The sample interquartile deviation for the property value is", quantile(VALP)["25%"], "to", quantile(VALP)["75%"], "dollars.")
+paste("The sample interquartile range for the property value is", quantile(VALP)["25%"], "to", quantile(VALP)["75%"], "dollars.")
 property_95 <- t.test(VALP)
 property_95
 paste("The 95-percent confidence interval for the property value is", prettyNum(property_95$conf.int[1]), "to", prettyNum(property_95$conf.int[2]), "dollars.")
@@ -95,11 +103,13 @@ hist_property +
   scale_y_continuous(name = "Number of household in sample") +
   annotate("text", x = 3000000, y = 15000, size = 3,
            label = paste("property value mean (95% confidence): ",prettyNum(property_95$conf.int[1]), "to", prettyNum(property_95$conf.int[2]),
+                         "\nSample median: ",prettyNum(median(VALP)),
                          "\nSample mean: ",prettyNum(mean(VALP)),
                          "\nSample standard deviation: ", prettyNum(sd(VALP)),
                          "\nSample interquatile range: ", quantile(VALP)["25%"], "to", quantile(VALP)["75%"] ))
 ```
-In 2018, the household property value was around 476450 dollars on average. The differences between the houses were huge. Half of these buildings cost 160000 to 599000 dollars. The overall average of property value was likely to be in the range from 472280 to 480620.8 dollars. The diagram is right skew, indicating that some households were spending much more money on their property.
+
+In 2018, the household property value was around 476450 dollars on average. Half of these buildings cost more than 340000 dollars. The differences between the houses were huge. Half of these buildings cost 160000 to 599000 dollars. The overall average of property value was likely to be in the range from 472280 to 480620.8 dollars. The diagram is right skew, indicating that some households were spending much more money on their property.
 
 # 6. Distribution of a categorical variable bd_year (when structure first built)
 ```{r}
@@ -136,6 +146,7 @@ ggplot(shares, aes(x=Building_age, y=Share, ymin = Low, ymax = High))+
                       breaks = c(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9) ,  
                       label = c("0", "10%", "20%", "30%", "40%", "50%", "60%", "70%", "80%", "90%"))
 ```
+
 Fifty-three percent of buildings were really old for households included in the sample, while the other 36% were old. There were only 11% of buildings newly built (in the last 20 years).
 
 # 7. Distribution of a categorical variable household_language (Household Language)
@@ -180,6 +191,7 @@ ggplot(shares_02, aes(Household_Language, y=Share, ymin = Low, ymax = High))+
                       breaks = c(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7) ,  
                       label = c("0", "10%", "20%", "30%", "40%", "50%", "60%", "70%"))
 ```
+
 For households included in the sample, most of them used English in daily life. Eight percent of families used Spanish. Ten percent of families used other Indo-European languages. Only five percent of households used Asian languages in life.
 
 
